webview: Address the loss of SoupSession:accept-language-auto=TRUE

With WebKit1, the Accept-Language header could be set for every
request based on g_get_language_names by using the SoupSession's
accept-language-auto property. This was lost during the port to
WebKit2.

Since WebKit2 doesn't expose its internal SoupSession, the same
functionality is now implemented using g_get_language_names and
webkit_web_context_set_preferred_languages.

Fallout from 81434a02fe638d982afdbe6cd9e5b75ddfdf238f

https://bugzilla.gnome.org/show_bug.cgi?id=758716